{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 197,
  "lineage": "6f6180f1-ae91-576c-31d5-540424fe8de2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "kubenetes-Master-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-0e1048975af583536",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kubenetes-Master-Server26"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0e1048975af583536",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0abd42596c34618c4",
            "private_dns": "ip-10-0-1-173.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_ip": "3.10.217.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00737a1521e104e38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Master-Server26"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "kubenetes-Worker-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-0d1b32476e71c216f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kubenetes-Worker-Server0"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0d1b32476e71c216f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b32c57befcd4b0db",
            "private_dns": "ip-10-0-1-157.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_ip": "35.177.179.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2bfcbaefbf7707e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Worker-Server0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-07d46b54d99a82c38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kubenetes-Worker-Server1"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-07d46b54d99a82c38",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0d38d87d1209991f2",
            "private_dns": "ip-10-0-1-144.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_ip": "35.176.159.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a93ad866a91d1b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Worker-Server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kubenetes-Ansible-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-01a91581bcc2ba6a1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a91581bcc2ba6a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05abc844d059a353e",
            "private_dns": "ip-10-0-3-143.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.143",
            "public_ip": "18.134.210.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042097a6522508946",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083ed26ac35cd8cb9",
            "tags": {
              "Name": "Kubenetes-Ansible-Server3"
            },
            "tags_all": {
              "Name": "Kubenetes-Ansible-Server3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          },
          "dependencies": [
            "aws_instance.kubenetes-Master-Server",
            "aws_instance.kubenetes-Worker-Server",
            "aws_security_group.kubenetes-fe-sg",
            "aws_subnet.kubenetes-pub-sn1",
            "aws_subnet.kubenetes-pub-sn2",
            "aws_vpc.kubenetes-vpc",
            "data.aws_instance.kubenetes-Master-Server",
            "data.aws_instance.kubenetes-Worker-Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubenetes-Master-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-0e1048975af583536",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1048975af583536",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0abd42596c34618c4",
            "private_dns": "ip-10-0-1-173.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_ip": "3.10.217.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00737a1521e104e38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Master-Server26"
            },
            "tags_all": {
              "Name": "kubenetes-Master-Server26"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          },
          "dependencies": [
            "aws_security_group.kubenetes-fe-sg",
            "aws_subnet.kubenetes-pub-sn1",
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubenetes-Worker-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-0d1b32476e71c216f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1b32476e71c216f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b32c57befcd4b0db",
            "private_dns": "ip-10-0-1-157.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_ip": "35.177.179.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2bfcbaefbf7707e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Worker-Server0"
            },
            "tags_all": {
              "Name": "kubenetes-Worker-Server0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          },
          "dependencies": [
            "aws_security_group.kubenetes-fe-sg",
            "aws_subnet.kubenetes-pub-sn1",
            "aws_vpc.kubenetes-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d09654d0a20d3ae2",
            "arn": "arn:aws:ec2:eu-west-2:885043952863:instance/i-07d46b54d99a82c38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d46b54d99a82c38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubenetes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d38d87d1209991f2",
            "private_dns": "ip-10-0-1-144.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_ip": "35.176.159.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a93ad866a91d1b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a28e12bffd0de7bf",
            "tags": {
              "Name": "kubenetes-Worker-Server1"
            },
            "tags_all": {
              "Name": "kubenetes-Worker-Server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03466fd733d8a2aba"
            ]
          },
          "dependencies": [
            "aws_security_group.kubenetes-fe-sg",
            "aws_subnet.kubenetes-pub-sn1",
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubenetes-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:internet-gateway/igw-08b8698abde383e82",
            "id": "igw-08b8698abde383e82",
            "owner_id": "885043952863",
            "tags": {
              "Name": "kubenetes-igw"
            },
            "tags_all": {
              "Name": "kubenetes-igw"
            },
            "vpc_id": "vpc-038640aee42c93c92"
          },
          "dependencies": [
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubenetes-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:route-table/rtb-09104b4556f9319d3",
            "id": "rtb-09104b4556f9319d3",
            "owner_id": "885043952863",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b8698abde383e82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubenetes-rt"
            },
            "tags_all": {
              "Name": "kubenetes-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-038640aee42c93c92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubenetes-igw",
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d59b408fe212d21",
            "route_table_id": "rtb-09104b4556f9319d3",
            "subnet_id": "subnet-0a28e12bffd0de7bf"
          },
          "dependencies": [
            "aws_internet_gateway.kubenetes-igw",
            "aws_route_table.kubenetes-rt",
            "aws_subnet.kubenetes-pub-sn1",
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a68e67d98b52e841",
            "route_table_id": "rtb-09104b4556f9319d3",
            "subnet_id": "subnet-083ed26ac35cd8cb9"
          },
          "dependencies": [
            "aws_internet_gateway.kubenetes-igw",
            "aws_route_table.kubenetes-rt",
            "aws_subnet.kubenetes-pub-sn2",
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubenetes-fe-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:security-group/sg-03466fd733d8a2aba",
            "description": "inbound tls",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03466fd733d8a2aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Out all port to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "kubenetes-fe-sg",
            "name_prefix": "",
            "owner_id": "885043952863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubenetes-fe-sg"
            },
            "tags_all": {
              "Name": "kubenetes-fe-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038640aee42c93c92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubenetes-pub-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:subnet/subnet-0a28e12bffd0de7bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a28e12bffd0de7bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885043952863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubenetes-pub_sn1"
            },
            "tags_all": {
              "Name": "kubenetes-pub_sn1"
            },
            "vpc_id": "vpc-038640aee42c93c92"
          },
          "dependencies": [
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubenetes-pub-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:subnet/subnet-083ed26ac35cd8cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083ed26ac35cd8cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885043952863",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubenetes-pub-sn2"
            },
            "tags_all": {
              "Name": "kubenetes-pub-sn2"
            },
            "vpc_id": "vpc-038640aee42c93c92"
          },
          "dependencies": [
            "aws_vpc.kubenetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubenetes-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:885043952863:vpc/vpc-038640aee42c93c92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0245d49e47711c9b9",
            "default_route_table_id": "rtb-0ea42c6e0e12be4c2",
            "default_security_group_id": "sg-09449db42bf26b6c9",
            "dhcp_options_id": "dopt-03499b8c64c2da893",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038640aee42c93c92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea42c6e0e12be4c2",
            "owner_id": "885043952863",
            "tags": {
              "Name": "kubenetes-vpc"
            },
            "tags_all": {
              "Name": "kubenetes-vpc"
            }
          }
        }
      ]
    }
  ]
}